@@ -1,3 +1,9 @@
+2011-01-22  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* TestFramework/Testing.h:
+	* TestFramework/README:
+	Make it easy to break at the start of a particular failed test.
+
 2011-01-21  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* TestFramework/gnustep-tests:
